--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Nunito:wght@300&display=swap");
 
 body {
-  font-family: "Comfortaa";
+  font-family: 'Nunito', sans-serif;
 }
 
 .main {
