--- a/src/index.css
+++ b/src/index.css
@@ -3,10 +3,10 @@
   margin: 0;
 }
 
-@import url("https://fonts.googleapis.com/css2?family=Nunito:wght@300&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@300&display=swap');
 
 body {
-  font-family: 'Nunito', sans-serif;
+  font-family: 'Comfortaa', cursive;
 }
 
 .main {
